namespace Boolean.CSharp.Source
{
    public class CurrentAccount : Account
    {
    
    }
}